# FileSearch

./: Cargo.toml  database.db
src/: main.rs
src/db/src/: database.rs
